@@ -1,3 +1,9 @@
+2001-10-09  Miguel Sofer  <msofer@users.sourceforge.net>
+	
+	* generic/tclObj.c: removed duplicate definition of tclObjsAlloced
+	and tclObjsFreed. These variables only exist when compiling with
+	TCL_COMPILE_STATS, and are already defined in generic/tclExecute.c
+
 2001-10-09  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclFileName.c (ExtractWinRoot): corrected ABR error
